@@ -22,14 +22,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 75)
-(Parent-Version lpmud 3-3 74)
-(Version-Log "Small improvements to the autoconfiguration.
-Windows and gcc 3.0 adjustments.
-Comparisons of operator-,  efun-, and simul efun closures was unstable.")
+(Project-Version lpmud 3-3 76)
+(Parent-Version lpmud 3-3 75)
+(Version-Log "Actions from shadows are now removed properly.
+New flag AA_IMM_ARGS for efun add_action().")
 (New-Version-Log
 "")
-(Checkin-Time "Sun, 15 Jul 2001 22:50:54 -0600")
+(Checkin-Time "Mon, 16 Jul 2001 00:28:59 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -62,8 +61,8 @@ Comparisons of operator-,  efun-, and simul efun closures was unstable.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.21 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.138 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.187 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.139 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.188 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.12 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -110,8 +109,8 @@ Comparisons of operator-,  efun-, and simul efun closures was unstable.")
   (src/access_check.h (lpmud/f/48_access_che 1.4 644))
   (src/access_check.c (lpmud/d/14_access_che 1.15.1.3 644))
   (src/alloca.c (lpmud/d/13_alloca.c 1.10 644))
-  (src/actions.h (lpmud/D/11_actions.h 1.6.1.3 644))
-  (src/actions.c (lpmud/D/12_actions.c 1.15.1.20 644))
+  (src/actions.h (lpmud/D/11_actions.h 1.6.1.4 644))
+  (src/actions.c (lpmud/D/12_actions.c 1.15.1.21 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.14 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.29 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.3 644))
@@ -182,11 +181,11 @@ Comparisons of operator-,  efun-, and simul efun closures was unstable.")
   (src/regexp.c (lpmud/36_regexp.c 1.17.1.4.1.2 644))
   (src/rxcache.h (lpmud/e/29_rxcache.h 1.7.1.4 644))
   (src/rxcache.c (lpmud/e/30_rxcache.c 1.11.1.9 644))
-  (src/sent.h (lpmud/33_sent.h 1.11.1.3 644))
+  (src/sent.h (lpmud/33_sent.h 1.11.1.4 644))
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.4 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.7 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.17 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.39 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.40 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.7 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.28 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.2 644))
@@ -334,7 +333,7 @@ Comparisons of operator-,  efun-, and simul efun closures was unstable.")
   (etc/mudloop (lpmud/M/46_mudloop 1.1 644))
 
   ;; Driver-related include files for the mudlib
-  (mudlib/sys/commands.h (lpmud/D/15_commands.h 1.3.1.1 644))
+  (mudlib/sys/commands.h (lpmud/D/15_commands.h 1.3.1.2 644))
   (mudlib/sys/debug_info.h (lpmud/t/6_debug_info 1.9 644))
   (mudlib/sys/driver_hook.h (lpmud/d/30_driver_hoo 1.2.1.2 644))
   (mudlib/sys/debug_message.h (lpmud/K/8_debug_mess 1.3 644))
@@ -726,7 +725,7 @@ Comparisons of operator-,  efun-, and simul efun closures was unstable.")
   (doc/efun/[] (lpmud/n/49_[] 1.3.1.1 644))
   (doc/efun/abs (lpmud/l/25_abs 1.2.1.2 644))
   (doc/efun/acos (lpmud/n/50_acos 1.1.1.2 644))
-  (doc/efun/add_action (lpmud/n/51_add_action 1.8 644))
+  (doc/efun/add_action (lpmud/n/51_add_action 1.9 644))
   (doc/efun/all_environment (lpmud/l/26_all_enviro 1.5 644))
   (doc/efun/all_inventory (lpmud/l/27_all_invent 1.2 644))
   (doc/efun/allocate (lpmud/o/3_allocate 1.1.1.2 644))
