@@ -11,18 +11,20 @@
 #define AA_SHORT    1  /* VERB must start with <verb>,
                         * args do not include extra characters */
 #define AA_NOSPACE  2  /* VERB must start with <verb>,
+                        * args and verb do include extra characters */
+#define AA_IMM_ARGS 3  /* VERB must start with <verb>,
                         * args do include extra characters */
 
 /* Indices in the arrays returned from command_stack()
  */
 
-#define CMD_VERB     0
-#define CMD_TEXT     1
-#define CMD_ORIGIN   2
-#define CMD_PLAYER   3
-#define CMD_FAIL     4
-#define CMD_FAILOBJ  5
+#define CMD_VERB       0
+#define CMD_TEXT       1
+#define CMD_ORIGIN     2
+#define CMD_PLAYER     3
+#define CMD_FAIL       4
+#define CMD_FAILOBJ    5
 
-#define CMD_SIZE     6
+#define CMD_SIZE       6
 
 #endif /* LPC_COMMANDS_H_ */
